Fix for dark mode not applied

--- a/assets/custom/custom.css
+++ b/assets/custom/custom.css
@@ -30,7 +30,7 @@ a.text-black.active {
 }
 
 .collapsible {
-    background-color: #777;
+    background-color: #353535;
     color: white;
     cursor: pointer;
     padding: 18px;
@@ -107,6 +107,14 @@ a.text-black.active {
     button {
         color: #000000
     }
+
+    .collapsible:after {
+        color: white;
+    }
+
+    .content {
+        background-color: #f1f1f1;
+    }
 }
 
 
@@ -137,5 +145,12 @@ a.text-black.active {
     }
     button {
         color: rgb(250, 250, 250) !important;
+    }
+    .collapsible:after {
+        color: rgb(233, 7, 7);
+    }
+
+    .content {
+        background-color: #2b2b2b;
     }
 }
